// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box Operations swapXY return the grid with x and y axis swapped  1`] = `
"-------------------------------------------------------
|  9  |  2  |     ❚     |     |     ❚     |     |  4  |
-------------------------------------------------------
|  1  |     |  8  ❚  9  |  4  |     ❚     |     |  7  |
-------------------------------------------------------
|     |     |  7  ❚  5  |  1  |     ❚  3  |  9  |     |
=======================================================
|  4  |     |     ❚     |  9  |     ❚  1  |     |     |
-------------------------------------------------------
|     |     |  3  ❚     |  8  |     ❚  9  |     |     |
-------------------------------------------------------
|     |     |  6  ❚     |  5  |     ❚     |     |  3  |
=======================================================
|     |  6  |  1  ❚     |  3  |  4  ❚  8  |     |     |
-------------------------------------------------------
|  3  |     |     ❚     |  6  |  9  ❚  2  |     |  1  |
-------------------------------------------------------
|  7  |     |     ❚     |     |     ❚     |  3  |  6  |
-------------------------------------------------------"
`;

exports[`Cell-checking functions Fill methods fillBoxes should match snapshot after one pass 1`] = `
"-------------------------------------------------------
|  9  |  1  |  6  ❚  4  |     |     ❚     |  3  |  7  |
-------------------------------------------------------
|  2  |     |     ❚     |     |     ❚  6  |     |     |
-------------------------------------------------------
|     |  8  |  7  ❚     |  3  |  6  ❚  1  |     |     |
=======================================================
|     |  9  |  5  ❚     |     |     ❚     |     |     |
-------------------------------------------------------
|     |  4  |  1  ❚  9  |  8  |  5  ❚  3  |  6  |     |
-------------------------------------------------------
|     |     |     ❚     |     |     ❚  4  |  9  |  5  |
=======================================================
|     |     |  3  ❚  1  |  9  |     ❚  8  |  2  |     |
-------------------------------------------------------
|  1  |     |  9  ❚     |     |     ❚     |     |  3  |
-------------------------------------------------------
|  4  |  7  |     ❚     |     |  3  ❚  9  |  1  |  6  |
-------------------------------------------------------"
`;

exports[`Cell-checking functions Fill methods fillColumns (phil collims?) should match snapshot after one pass 1`] = `
"-------------------------------------------------------
|  9  |  1  |     ❚  4  |     |     ❚     |  3  |  7  |
-------------------------------------------------------
|  2  |     |  4  ❚     |     |  9  ❚  6  |     |     |
-------------------------------------------------------
|     |  8  |  7  ❚     |  3  |  6  ❚  1  |     |  9  |
=======================================================
|     |  9  |  5  ❚     |     |     ❚     |     |     |
-------------------------------------------------------
|     |  4  |  1  ❚  9  |  8  |  5  ❚  3  |  6  |     |
-------------------------------------------------------
|     |     |     ❚     |     |     ❚  4  |  9  |     |
=======================================================
|     |     |  3  ❚  1  |  9  |     ❚  8  |  2  |     |
-------------------------------------------------------
|     |     |  9  ❚     |     |     ❚     |     |  3  |
-------------------------------------------------------
|  4  |  7  |     ❚     |     |  3  ❚  9  |  1  |  6  |
-------------------------------------------------------"
`;

exports[`Cell-checking functions Fill methods fillRows should match snapshot after one pass 1`] = `
"-------------------------------------------------------
|  9  |  1  |     ❚  4  |     |     ❚     |  3  |  7  |
-------------------------------------------------------
|  2  |     |     ❚     |     |     ❚  6  |     |     |
-------------------------------------------------------
|     |  8  |  7  ❚     |  3  |  6  ❚  1  |     |  9  |
=======================================================
|     |  9  |  5  ❚     |     |     ❚     |     |     |
-------------------------------------------------------
|  7  |  4  |  1  ❚  9  |  8  |  5  ❚  3  |  6  |  2  |
-------------------------------------------------------
|     |     |     ❚     |     |     ❚  4  |  9  |     |
=======================================================
|     |     |  3  ❚  1  |  9  |  7  ❚  8  |  2  |     |
-------------------------------------------------------
|     |     |  9  ❚     |     |     ❚     |     |  3  |
-------------------------------------------------------
|  4  |  7  |     ❚     |     |  3  ❚  9  |  1  |  6  |
-------------------------------------------------------"
`;

exports[`Fill Cells methods fillCellsLogically should match snapshot after processing 1`] = `
"-------------------------------------------------------
|     |     |     ❚     |  9  |  6  ❚     |  7  |     |
-------------------------------------------------------
|     |     |  4  ❚     |     |     ❚     |     |  9  |
-------------------------------------------------------
|     |     |     ❚     |  1  |  5  ❚  4  |     |     |
=======================================================
|     |     |     ❚     |     |  9  ❚     |  4  |  8  |
-------------------------------------------------------
|     |  6  |  1  ❚     |     |     ❚  5  |  2  |     |
-------------------------------------------------------
|  8  |  4  |     ❚  7  |     |     ❚     |     |     |
=======================================================
|     |     |  2  ❚  5  |  4  |     ❚     |     |     |
-------------------------------------------------------
|  7  |     |     ❚     |     |     ❚  3  |     |     |
-------------------------------------------------------
|     |  5  |     ❚  1  |  8  |     ❚     |     |     |
-------------------------------------------------------"
`;

exports[`flattenBoxes should return the grid with the boxes represented as rows 1`] = `
"-------------------------------------------------------
|  9  |  1  |     ❚  2  |     |     ❚     |  8  |  7  |
-------------------------------------------------------
|  4  |     |     ❚     |     |     ❚     |  3  |  6  |
-------------------------------------------------------
|     |  3  |  7  ❚  6  |     |     ❚  1  |     |     |
=======================================================
|     |  9  |  5  ❚     |  4  |  1  ❚     |     |     |
-------------------------------------------------------
|     |     |     ❚  9  |  8  |  5  ❚     |     |     |
-------------------------------------------------------
|     |     |     ❚  3  |  6  |     ❚  4  |  9  |     |
=======================================================
|     |     |  3  ❚     |     |  9  ❚  4  |  7  |     |
-------------------------------------------------------
|  1  |  9  |     ❚     |     |     ❚     |     |  3  |
-------------------------------------------------------
|  8  |  2  |     ❚     |     |  3  ❚     |  1  |  6  |
-------------------------------------------------------"
`;
